[188559300]: update vignette code

--- a/vignettes/fork-and-merge.Rmd
+++ b/vignettes/fork-and-merge.Rmd
@@ -17,20 +17,55 @@ library(crunch)
 ```
 ```{r, results='hide', echo=FALSE, message=FALSE}
 library(crunch)
-set_crunch_opts("crunch.api" = "https://app.crunch.io/api/")
+set_crunch_opts("crunch.api" = "https://team.crunch.io/api/")
 library(httptest)
+run_cleanup <- !dir.exists("fork-and-merge")
+ds_to_delete <- c()
+httpcache::clearCache()
 start_vignette("fork-and-merge")
+
+
+# The usual redactor does not work, because the end of the UUIDs for variables
+# are stable between datasets (the first variable ends with "000000")
+# and so we have a clash when using variables from merged dataests
+# So this redactor should be the same as the other except for the variable UUID handling
+# (For context, we have to redact so we don't get paths that are too long to subtmit to CRAN)
+#
+# Eventually this should probably be the default, but it only really affects
+# this vignette and I don't feel like fixing everything (other vignettes, as well as crplyr?)
+set_redactor(function(response) {
+    ## Remove multipart form fields because POST sources/ sends a tmpfile path
+    ## that's different every time, so the request will never match.
+    response$request$fields <- NULL
+    response %>%
+        redact_auth() %>%
+        gsub_response("([0-9a-f]{6})[0-9a-f]{26}", "\\1") %>% ## Prune UUIDs
+        httptest::gsub_response("([0-9A-Za-z]{4})[0-9A-Za-z]{18}[0-9]{4}([0-9]{2})", "\\1\\2") %>% # UUIDs in variables now too
+        gsub_response(
+            "https.//(app|team).crunch.io/api/progress/[^\"].*?/",
+            "https://\\1.crunch.io/api/progress/"
+        ) %>% ## Progress is meaningless in mocks
+        gsub_response("https.//(app|team).crunch.io", "") %>% ## Shorten URL
+        gsub_response("https%3A%2F%2F(app|team).crunch.io", "") ## Shorten encoded URL
+})
+set_requester(function(request) {
+    request$fields <- NULL
+    request %>%
+        gsub_request("https.//(app|team).crunch.io", "") ## Shorten URL
+})
 ```
 
 ```{r message=FALSE, results='hide'}
-ds <- newDataset(SO_survey, "stackoverflow_survey")
+my_project <- newProject("examples/rcrunch vignette data")
+ds <- newDataset(SO_survey, "stackoverflow_survey", project = my_project)
 ```
 ```{r forcevarcat1, include=FALSE}
 # Force catalog so that catalog is loaded at a consistent time
 ds <- forceVariableCatalog(ds)
+ds_to_delete[length(ds_to_delete) + 1] <- self(ds)
 ```
 
-Imagine that this dataset is shared with several users, and you want to update it without affecting their usage. You might also want to consult with other analysts or decision makers to make sure that the data is accurate before sharing it with clients. To do this you call `forkDataset()` to create a copy of the dataset.
+Imagine that this dataset is shared with several users, and you want to update it without affecting their usage. You might also want to consult with other analysts or decision makers to make sure that the data is accurate before sharing it with clients. To do this you call `forkDataset()` to create a copy of the dataset. By default the forked dataset will be placed in the same project folder as the original, but you can specify a different project folder. 
 
 ```{r fork dataset}
 forked_ds <- forkDataset(ds)
@@ -38,6 +73,7 @@ forked_ds <- forkDataset(ds)
 ```{r forcevarcat2, include=FALSE}
 # Force catalog so that catalog is loaded at a consistent time
 forked_ds <- forceVariableCatalog(forked_ds)
+ds_to_delete[length(ds_to_delete) + 1] <- self(forked_ds)
 ```
 
 You now have a copied dataset which is identical to the original, and are free to make changes without fear of disrupting the client's experience. You can add or remove variables, delete records, or change the dataset's organization. These changes will be isolated to your fork and won't be visible to the end user until you decide to merge the fork back into the original dataset. This lets you edit the dataset with confidence because your work is isolated.
@@ -90,13 +126,13 @@ Another good use of the fork-edit-merge workflow is when you want to append data
 change_state()
 ```
 ```{r upload wave 2, message=FALSE, results='hide'}
-wave2 <- newDataset(SO_survey, "SO_survey_wave2")
-
+wave2 <- newDataset(SO_survey, "SO_survey_wave2", project = my_project)
 ```
 
 We then fork the original dataset and append the new wave onto the forked dataset.
 ```{r state change4, include=FALSE}
 change_state()
+ds_to_delete[length(ds_to_delete) + 1] <- self(wave2)
 ```
 ```{r fork-and-append, results='hide'}
 ds_fork <- forkDataset(ds)
@@ -112,6 +148,7 @@ nrow(ds_fork)
 Once we've confirmed that the append completed successfully we can merge the forked dataset back into the original one.
 ```{r state change5, include=FALSE}
 change_state()
+ds_to_delete[length(ds_to_delete) + 1] <- self(ds_fork)
 ```
 ```{r}
 ds <- mergeFork(ds, ds_fork)
@@ -136,7 +173,7 @@ house_table$HouseholdSize <- sample(
     nrow(house_table),
     TRUE
 )
-house_ds <- newDataset(house_table, "House Size")
+house_ds <- newDataset(house_table, "House Size", project = my_project)
 ```
 
 There are a few reasons why we might not want to merge this new table onto our user facing data. For instance we might make a mistake in constructing the table, or have some category names which don't quite match up. Merging the data onto a forked dataset again gives us the safety to make changes and verify accuracy without affecting client-facing data.
@@ -149,6 +186,8 @@ ds_fork <- merge(ds_fork, house_ds, by = "Respondent")
 Before merging the fork back into the original dataset, we can check that everything went well with the join.
 ```{r state change7, include=FALSE}
 change_state()
+ds_to_delete[length(ds_to_delete) + 1] <- self(house_ds)
+ds_to_delete[length(ds_to_delete) + 1] <- self(ds_fork)
 ```
 ```{r check new data}
 crtabs(~ TabsSpaces + HouseholdSize, ds_fork)
@@ -170,4 +209,9 @@ Forking and merging datasets is a great way to make changes to the data. It allo
 
 ```{r, results='hide', echo=FALSE, message=FALSE}
 end_vignette()
+if (run_cleanup) {
+    for (ds_id in ds_to_delete) with_consent(deleteDataset(ds_id))
+    with_consent(delete(my_project))
+}
+
 ```
